--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,6 +40,7 @@ jobs:
       env:
         VPC: ${{ secrets.VPC }}
         SUBNET: ${{ secrets.SUBNET }}
+        CLOUD_SQL_INSTANCES: ${{ secrets.CLOUD_SQL_INSTANCES }}
 
     - name: generate .env file
       run: echo "${{ secrets.ENV_FILE }}" > .env
@@ -47,13 +48,3 @@ jobs:
     - id: "deploy"
       name: "Deploy App"
       run: gcloud app deploy app.yaml --project ${{ secrets.PROJECT_ID }} --promote --verbosity debug --service-account=${{ secrets.APP_SERVICE_ACCOUNT }}
-#    - id: "deploy"
-#      uses: 'google-github-actions/deploy-appengine@v2'
-#      env:
-#        CLOUDSDK_APP_CLOUD_BUILD_TIMEOUT: 1800 # 30 minutes
-#      with:
-#        project_id:  ${{ secrets.PROJECT_ID }}
-#        working_directory: ${{ github.workspace }}
-#        deliverables: app.yaml
-#        version: ctb-dev-08
-#        flags: "--verbosity=debug --service-account=${{ secrets.APP_SERVICE_ACCOUNT }}"
