fix pycairo package build error

--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ xhtml2pdf==0.2.16
 gunicorn==22.0.0
 django-cron==0.6.0
 Werkzeug==2.0.3
+setuptools>=65.0.0
 functions-framework==3.8.0
 PyMySQL==1.0.2
 python-bidi==0.4.2
